<resources>
    <string name="app_name">Registro de Actividades</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="positiveAction1">Lavar platos</string>
    <string name="positiveAction2">Arreglar la sala</string>
    <string name="positiveAction3">Arreglar la cocina</string>
    <string name="positiveAction4">Arreglar la ropa</string>
    <string name="positiveAction5">Trapear</string>
    <string name="positiveAction6">Lavar la cocina</string>
    <string name="positiveAction7">Ser amable</string>
    <string name="positiveAction8">Bañar al perro</string>
    <string name="positiveAction9">Cuidar</string>
    <string name="positiveAction10">Recoger juguetes</string>
    <string name="positiveAction11">Lavar el baño</string>
    <string name="positiveAction12">Ayudar</string>
    <string name="positiveAction13">Cocinar</string>
    <string name="positiveAction14">Jugar con Riley</string>
    <string name="positiveAction15">Lavarse los pies</string>
    <string name="positiveAction16">Llegar temprano</string>
    <string name="positiveAction17">Hablar en ingles</string>
    <string name="positiveAction18">Papa grosero</string>
    <string name="positiveAction19">Papa no escucha</string>

    <string name="negativeAction1">Cara fea</string>
    <string name="negativeAction2">Ser malo</string>
    <string name="negativeAction3">Molestar</string>
    <string name="negativeAction4">Golpear</string>
    <string name="negativeAction5">No despedirse</string>
    <string name="negativeAction6">Malcriado</string>
    <string name="negativeAction7">Hacer problemas</string>
    <string name="negativeAction8">Golpear al perro</string>
    <string name="negativeAction9">Ser sucio</string>
    <string name="negativeAction10">Mentiroso</string>
    <string name="negativeAction11">Por sonso</string>
    <string name="negativeAction12">Ser descuidado</string>
    <string name="negativeAction13">Hablar groserias</string>
    <string name="negativeAction14">Hablar feo</string>
    <string name="negativeAction15">No lavarse los pies</string>
    <string name="negativeAction16">No llegar temprano</string>
    <string name="negativeAction17">No hablar en ingles</string>
    <string name="negativeAction18">No escuchar</string>
    <string name="negativeAction19">No contestar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha_test">Mon Feb 20 10:52:12 GMT-05:00 2023</string>
    <string name="text_ayer_test">Ayer 120 pts</string>
    <string name="text_hoy_test">Hoy 340 pts</string>
    <string name="text_dinero_test">S/. 13.50</string>
    <string name="premios">Premios</string>
    <string name="nro_test">130</string>
    <string name="castigo">Castigo</string>
    <string name="en_juego">En Juego</string>

    <string name="soles">S/a , %s!</string>
    <string name="signo_soles">S/.  </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="buenas_acciones">Buenas Acciones</string>
    <string name="malas_acciones">Malas Acciones</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="antes">Antes</string>
    <string name="ahorita_s">Ahorita: S/.</string>
    <string name="ahora">Ahora:</string>
    <string name="pts">pts</string>
    <string name="imagen_buenas_acciones">imagen buenas acciones</string>
    <string name="ganaste">Ganaste</string>
    <string name="perdiste">Perdiste</string>
    <string name="tienes">TIENES</string>
    <string name="vidas">Vidas</string>
    <string name="_21">21</string>
    <string name="vidas_capital">VIDAS</string>
    <string name="actualizar">Actualizar</string>
    <string name="fecha_ultimo_registro">Fecha ultimo registro</string>
    <string name="fecha_inicio_registro">Fecha inicio de registro</string>
    <string name="vidas_antes">Vidas antes</string>

    <string name="format_text_money">S/. %s</string>
    <string name="format_text_points">%d puntos.</string>

</resources>