<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<data>
        <variable
            name="hijo"
            type="com.example.registrodeactividades.database.Hijo" />
        <variable
            name="clickListener"
            type="com.example.registrodeactividades.detalleusuario.ItemListener"/>
    </data>-->
    <data>

        <variable
            name="registroPorUsuarioViewModel"
            type="com.example.registrodeactividades.registroporusuario.RegistroPorUsuarioViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_foto_user"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/foto_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/andrew" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_nombre_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{registroPorUsuarioViewModel.user.nombre}"
            android:textColor="@color/orange_new"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_foto_user"
            tools:text="Andrew" />

        <TextView
            android:id="@+id/text_id_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_nombre_user"
            tools:text="Id : 123456" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="52dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_id_user">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_dinero_ganaste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signo_soles"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/text_dinero_ganaste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="00.00"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_dinero_ganaste"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ganaste"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/label_dinero_ganaste"
                    app:layout_constraintTop_toBottomOf="@id/text_dinero_ganaste"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_dinero_tienes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signo_soles"
                    android:textColor="@color/orange_new"
                    android:textSize="18sp"
                    android:layout_marginEnd="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:id="@+id/text_dinero_tienes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="54.00"
                    android:textColor="@color/orange_new"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@id/label_dinero_tienes"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tienes"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_dinero_tienes"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/label_dinero_perdiste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signo_soles"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/text_dinero_perdiste"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/text_dinero_perdiste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="00.00"
                    android:textSize="12sp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="@id/text_dinero_perdiste"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/perdiste"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/text_dinero_perdiste"
                    app:layout_constraintTop_toBottomOf="@id/text_dinero_perdiste"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@{registroPorUsuarioViewModel.user.fecha}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat"
            tools:text="@string/fecha_test" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_fecha">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_puntos_premio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    tools:text="130" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/premios"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/divider3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_puntos_hoy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    tools:text="130" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TIENES"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/divider4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_puntos_castigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    tools:text="130" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/castigo"
                    android:textSize="12sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> registroPorUsuarioViewModel.actualizarDatos()}"
            android:text="actualizar"
            android:padding="12dp"
            android:drawablePadding="8dp"
            android:background="@color/transparente_new"
            android:drawableTop="@drawable/actualizar_small"
            app:layout_constraintBottom_toTopOf="@id/linearLayoutCompat3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat2"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/linearLayoutCompat2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_edit"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:padding="12dp"
                android:drawableStart="@drawable/baseline_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue_new_1"
                android:text="edit"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_registar"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                android:drawableStart="@drawable/baseline_pending_actions_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue_new_1"
                android:text="registrar" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>